# npb-season-simulation

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: df_pitcher_2021.csv  df_pitcher_2023.csv  df_runs_2021.csv  df_runs_2023.csv
data/pitcher/02/: 2023-02-23.csv  2023-02-25.csv  2023-02-26.csv
data/pitcher/03/: 2023-03-04.csv  2023-03-05.csv  2023-03-07.csv  2023-03-08.csv  2023-03-09.csv  2023-03-10.csv  2023-03-11.csv  2023-03-12.csv  2023-03-14.csv  2023-03-15.csv  2023-03-16.csv  2023-03-17.csv  2023-03-18.csv  2023-03-19.csv  2023-03-21.csv  2023-03-22.csv  2023-03-24.csv  2023-03-25.csv  2023-03-26.csv  2023-03-30.csv  2023-03-31.csv
data/pitcher/04/: 2023-04-01.csv  2023-04-02.csv  2023-04-04.csv  2023-04-05.csv  2023-04-06.csv  2023-04-07.csv  2023-04-08.csv  2023-04-09.csv  2023-04-11.csv  2023-04-12.csv  2023-04-13.csv  2023-04-14.csv  2023-04-15.csv  2023-04-16.csv  2023-04-18.csv  2023-04-19.csv  2023-04-20.csv  2023-04-21.csv  2023-04-22.csv  2023-04-23.csv  2023-04-25.csv  2023-04-26.csv  2023-04-27.csv  2023-04-28.csv  2023-04-29.csv  2023-04-30.csv
data/pitcher/05/: 2023-05-02.csv  2023-05-03.csv  2023-05-04.csv  2023-05-05.csv  2023-05-06.csv  2023-05-07.csv  2023-05-09.csv  2023-05-10.csv  2023-05-11.csv  2023-05-12.csv  2023-05-13.csv  2023-05-14.csv  2023-05-16.csv  2023-05-17.csv  2023-05-18.csv  2023-05-19.csv  2023-05-20.csv  2023-05-21.csv  2023-05-23.csv  2023-05-24.csv  2023-05-25.csv  2023-05-26.csv  (+4 more)
src/: game.py  main.py  plot.py  preprocess.py  runs.py  simulation.py  utils.py
(+331 files in other folders)
